--- a/style.css
+++ b/style.css
@@ -9,6 +9,29 @@ body{
     flex-direction: row;
 }
 
+.addfield, .button2{
+    cursor: pointer;
+    outline: 0;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.addfield:hover, .button2:hover{
+        color: #fff;
+        background-color: #0b5ed7;
+        border-color: #0a58ca;
+}
+
 .sidemenu{
     height: 100vh;
     width: 20vw;
@@ -29,6 +52,7 @@ body{
 #formDiv{
     margin-top: 15px;
     align-self: center;
+    width: 400px;
 }
 
 .testar{
@@ -123,3 +147,6 @@ label{
   .openButton:hover {
     opacity: 1;
   }
+
+
+  
