--- a/style.css
+++ b/style.css
@@ -32,12 +32,55 @@ body{
         border-color: #0a58ca;
 }
 
+.printbutton{
+  cursor: pointer;
+  outline: 0;
+  color: #fff;
+  background-color: #8FBC8F;
+  border-color: #8FBC8F;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  border: 1px solid transparent;
+  padding: 6px 12px;
+  font-size: 16px;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.printbutton:hover{
+  color: #fff;
+  background-color: #8FBC8F;
+  border-color: #8FBC8F;
+}
+
+
 .sidemenu{
     height: 100vh;
     width: 20vw;
     display: flex;
     flex-direction: column;
     border-right-style: solid;
+}
+
+@page {
+  size: auto;
+  margin: 0;
+}
+
+@media print{
+  .sidemenu {
+    display: none;
+  }
+
+  .container{
+    margin-left: 80px;
+  }
+
+  @page :footer, :header {
+    display: none
+  }
 }
 
 .formarea{
