--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body{
     padding: 0;
     margin: 0;
@@ -7,6 +9,10 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: row;
+}
+
+h1, label{
+  font-family: 'Montserrat', sans-serif;
 }
 
 .addfield, .button2{
@@ -88,8 +94,16 @@ body{
     width: 80vw;
     display: flex;
     flex-direction: column;
-    text-align: center;
 
+
+}
+
+.formarea h1{
+  text-align: center;
+}
+
+.formarea label{
+  text-align: left;
 }
 
 #formDiv{
@@ -98,12 +112,8 @@ body{
     width: 400px;
 }
 
-.testar{
-    display: inline-block;
-}
-
 input, label{
-    display:block;
+    display:inline-block;
 }
 
 input[type=text]{
@@ -117,7 +127,7 @@ input[type=text]{
   }
 
 label{
-    margin-right: 90%;
+    text-align: left;
     font-size: 22px;
 }
 
