--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ body{
     flex-direction: row;
 }
 
-h1, label{
+h1, label, h1 i{
+  font-family: 'Montserrat', sans-serif;
+}
+
+i{
   font-family: 'Montserrat', sans-serif;
 }
 
