--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
     margin: 0;
 }
 
+[contenteditable] {
+  outline: 0px solid transparent;
+}
+
 .container{
     height: 100vh;
     display: flex;
@@ -17,6 +21,14 @@ h1, label, h1 i{
 
 i{
   font-family: 'Montserrat', sans-serif;
+}
+
+.adjustmentdiv{
+  display: flex;
+  margin-top: 20px;
+  text-align: center;
+  justify-content: left;
+  margin-left: 75px;
 }
 
 .addfield, .button2{
@@ -66,6 +78,12 @@ i{
 }
 
 
+.adjustmentdiv{
+  display: flex;
+  align-items: center;
+}
+
+
 .sidemenu{
     height: 100vh;
     width: 20vw;
@@ -98,7 +116,7 @@ i{
     width: 80vw;
     display: flex;
     flex-direction: column;
-
+    background-color: #DCDBDB;
 
 }
 
